--- a/Design trang web/TAKAOSAN-PC.html
+++ b/Design trang web/TAKAOSAN-PC.html
@@ -8,6 +8,7 @@
     <body>
         <div>
             <p class="header"></p>
+            <img src="image-assets/logo-header.png" />
         </div>
 
         <div>
@@ -17,33 +18,81 @@
 
         <div>
             <ul class="content_navigation">
-                <li>HOME</li>
+                <li id="menu-home">HOME</li>
                 <li>|</li>
-                <li>ABOUT</li>
+                <li id="menu-about">ABOUT</li>
                 <li>|</li>
-                <li>SHOP</li>
+                <li id="menu-shop">SHOP</li>
                 <li>|</li>
-                <li>ACCESS</li>
+                <li id="menu-access">ACCESS</li>
                 <li>|</li>
-                <li>BLOG</li>
-
+                <li id="menu-blog">BLOG</li>
             </ul>
         </div>
 
         <div>
             <p class="content_news"></p>
+            <h2>NEWS </h2>
         </div>
 
         <div>
-            <p class="content_features"></p>
+            <h2>FEATURES</h2>
+            <div id="features" class="content_features">
+                <img src="image-assets/features-image.jpg"/>
+            </div>
+            <div id="text" class="content_features">
+                <p>Waterproof for the outdoor scene</p>
+                <p>TAKAOSAN's hardware pursues the best material</p>
+                <p>and technology and innovative design.It is a brand sticking to quality thoroughly.TAKAOSAN is developing various things.</p>
+                <p>And The most popular backpack "Aero 888".Using a water repellent nylon with strength "ballistic nylon" on the table cloth, and a tough rubber called hyperon on the lining.Waterproof W on the front and back, it is safe even for outdoor scenes and usual steep rain.</p>
+            </div>
+            <div id="aero888" class="content_features">
+                <img src="image-assets/aero888.png"/>
+            </div>
         </div>
 
         <div>
-            <p class="content_subscription"></p>
+            <h2>SUBSCRIPTION</h2>
+            <p>We run a flat-rate service that we will send recommended items every month to you.</p>
+            <p>It's free for the first month so you can start with confidence.</p>
+            <div id="subscription-starter" class="content_subscription">
+                <img src="image-assets/subscription-starter-image.jpg"/>
+                <p>Starter</p>
+                <p>¥2,400/m</p>
+                <p>Starter pack to begin easily</p>
+                <p>more detail</p>
+            </div>
+            <div id="subscription-standart" class="content_subscription">
+                <img src="image-assets/subscription-standard-image.jpg"/>
+                <p>Standard</p>
+                <p>¥7,800/m</p>
+                <p>Recommended standard pack</p>
+                <p>more detail</p>
+            </div>
+            <div id="subscription-master" class="content_subscription">
+                <img src="image-assets/subscription-master-image.jpg"/>
+                <p>Master</p>
+                <p>¥16,400/m</p>
+                <p>We will deliver a high brand monthly</p>
+                <p>more detail</p>
+            </div>
         </div>
 
         <div>
+            <h2>ITEMS</h2>
             <p class="content_items"></p>
+            <img src="image-assets/items-image01.png"/>
+            <img src="image-assets/items-image02.png"/>
+            <img src="image-assets/items-image03.png"/>
+            <img src="image-assets/items-image04.png"/>
+            <img src="image-assets/items-image05.png"/>
+            <img src="image-assets/items-image06.png"/>
+            <img src="image-assets/items-image07.png"/>
+            <img src="image-assets/items-image08.png"/>
+            <img src="image-assets/items-image09.png"/>
+            <img src="image-assets/items-image10.png"/>
+            <img src="image-assets/items-image11.png"/>
+            <img src="image-assets/items-image12.png"/>
         </div>
 
         <div>
